--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <nav class="head"> 
      <div>
     <a href="p"><img src="images/_Piggyvest-removebg-preview.png" alt="piggyvest logo" width="200" height="40" style="margin-bottom: -10px;"></a>
+    <div class="ham">
+<span class="line"></span>
+<span class="line"></span>
+<span class="line"></span>
+    </div>
     <a class="link" href="/save">Save</a>
     <a class="link" href="/save">Invest</a>
     <a class="link" href="/save">Stories</a>
@@ -35,25 +40,24 @@ them save and invest with ease.
 <BUtton class="iphone"><img src="images/apple_214491.png" alt=""> Get on iphone</BUtton>  <BUtton class="iphone"><img src="images/google-play_6124997.png" alt=""> Get on iphone</BUtton> 
 </pre> </h1>
 </div>
-<img src="images/woman.png" alt="card" style="border-radius: 16px; width:500px; height:100%; margin-left: 175px; margin-top: 150px; border-radius: 36px; ">
-    <img class="header" src="images/target.png" alt="card" style="opacity: 1; width: 210px; height: 100%; margin-left: -150px; margin-top: 200px; border-radius: 15px;">
-    <img class="header" src="images/safe.png" alt="card" style="opacity: 1; width: 210px; height: 100%; margin-left: -670px; margin-top: 280px; border-radius: 15px;">
-    <img class="header" src="images/flex.png" alt="card" style="opacity: 1; width: 210px; height: 100%; margin-left: -200px; margin-top: 480px; border-radius:20px; ">
-    <img class="header" src="images/card4 (1).avif" alt="card" style="opacity: 1; width: 210px; height: 100%; margin-left: 250px; margin-top:430px; border-radius: 15px;">
-    <img class="header" src="images/piggybank.png" alt="card" style="opacity: 1; width: 210px; height: 100%; margin-left: -400px; margin-top: 600px; border-radius: 20px;">
+<img class="wom" src="images/woman.png" alt="card" >
+    <img class="header" src="images/target.png" alt="card" >
+    <img class="header2" src="images/safe.png" alt="card" >
+    <img class="header3" src="images/flex.png" alt="card">
+    <img class="header4" src="images/card4 (1).avif" alt="card">
+    <img class="header5" src="images/piggybank.png" alt="card" >
   </div>
  
 <div>
-  <img src="images/securitylock.svg" alt="" width="100px"  style="margin-bottom: -210px; margin-left: 25px;">
-  <p style="color: rgb(18,34,49); font-size: 30px; font-weight: bold; margin-left: 152px; margin-top: 100px;"> Your security is our priority</p>
-<pre style="margin-left: 150px; margin-top: -10px; font-size: 20px;  font-weight: lighter;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"> PiggyVest uses the highest level of Internet Security and it is secured by 256 bits 
- SSL security encryption to ensure that your information is comepletely protected from fraud.</pre>
-          <a style="margin-left: 240px; text-decoration: none; font-size: 20px; color: rgb(18,34,49);" href=""> <img src="images/right-down_10766640.png" alt="" height="25px" width="25px"> More on our security measures</a>
+  <img  class="lock" src="images/securitylock.svg" alt="" width="100px"  style=" margin-bottom:-140px;">
+  <p class="security" > Your security is our priority</p>
+<p class="sec"> PiggyVest uses the highest level of Internet Security and it is secured by 256 bits <br>
+ SSL security encryption to ensure that your information is comepletely protected from fraud.</p>
+ <a class="right" href=""> <img src="images/right-down_10766640.png" alt="" height="25px" width="25px"> More on our security measures</a>
 </div>
 <div>
- <h3 style="font-size: 48px; line-height: 66px; max-width: 350px;  font-family: Eina 1px bold; font-weight: 700; color: #122231; margin: 285px 170px 0;">5 ways to build your savings</h3>
-<p style="margin: 0px 150px 0px; font-size: 24px; max-width: 350px; line-height: 35px;">Earn 5%-15% when you save with any of these piggyvest plans.</p>
+ <h3 class="ways">5 ways to build your savings</h3>
+<p class="earn">Earn 5%-15% when you save with any of these piggyvest plans.</p>
 <div class="phone1">
 <a class="pig" href="https://www.piggyvest.com/piggybank">
 
