made few changes

--- a/index.html
+++ b/index.html
@@ -34,26 +34,30 @@
 
     <div class="girl" >
       <div class="font">
-  <h1 class="Better">The Better Way To <br> Save & Invest <pre>Piggyvest helps over 4 million customers 
+  <h1 class="Better">The Better Way To Save & Invest <pre>Piggyvest helps over 4 million customers 
 achieve their financial goals by helping
 them save and invest with ease. 
 <BUtton class="iphone"><img src="images/apple_214491.png" alt=""> Get on iphone</BUtton>  <BUtton class="iphone"><img src="images/google-play_6124997.png" alt=""> Get on iphone</BUtton> 
 </pre> </h1>
 </div>
+<div class="all" >
 <img class="wom" src="images/woman.png" alt="card" >
-    <img class="header" src="images/target.png" alt="card" >
-    <img class="header2" src="images/safe.png" alt="card" >
+<div class="headers">
+    <img class="header" src="images/safe.png" alt="card"   >
+    <img class="header2" src="images/target.png" alt="card" >
     <img class="header3" src="images/flex.png" alt="card">
     <img class="header4" src="images/card4 (1).avif" alt="card">
     <img class="header5" src="images/piggybank.png" alt="card" >
   </div>
+  </div>
+  </div>
  
+  <img  class="lock" src="images/securitylock.svg" alt="" width="100px" >
 <div>
-  <img  class="lock" src="images/securitylock.svg" alt="" width="100px"  style=" margin-bottom:-140px;">
   <p class="security" > Your security is our priority</p>
 <p class="sec"> PiggyVest uses the highest level of Internet Security and it is secured by 256 bits <br>
  SSL security encryption to ensure that your information is comepletely protected from fraud.</p>
- <a class="right" href=""> <img src="images/right-down_10766640.png" alt="" height="25px" width="25px"> More on our security measures</a>
+ <a class="right" href=""> <img src="images/right-down_10766640.png" alt="" height="25px" width="25px" style="margin-left: 150px;"> More on our security measures</a>
 </div>
 <div>
  <h3 class="ways">5 ways to build your savings</h3>
@@ -125,28 +129,26 @@ them save and invest with ease.
         </div>
         <div class="purple">
           <div>
-          <h4 style="max-width: unset; font-size: 36px; line-height: 50px; color: #fff; margin-left: px; margin-top: 50px;">Earn up to 25% returns</h4>
-       <pre style="max-width: unset; font-size: 25px; line-height: 28px; font-weight: 400;margin-top: 2rem; color: #fed6f1; margin-right:550px; font-family: 'Courier New', Courier, monospace;">"Invest securely and confidently
-on the go. Grow your money
-confidently by investing in pre-
-vetted investment
-opportunities."</pre>
-<img src="images/invest.avif" alt="" width="430px" height="450px" style="margin-right: 00px; float: right; margin-top:-220px; margin-bottom: 0px;" >
+            <div style="margin-left: -250px;">
+      <h4 class="returns">Earn up to 25% returns</h4>
+       <p class="money" >Invest securely and confidently <br>on the go. Grow your money <br>
+        confidently by investing in pre-<br>vetted investment <br>opportunities.</p>
+      </div>
+        <img class="myinv" src="images/invest.avif" alt="" width="430px" height="450px" >
 </div>
 </div>
       </section>
       <h2 class="meet">Meet our saver of the month</h2>
-      <pre class="every">"Every month, we shine a spotlight on one saver, asking them about
-their savings culture and how piggyvest has helprd them"
-      </pre>
-      <iframe src="https://www.youtube.com/embed/8XzCzC9pFGM?autoplay=1&mute=1" frameborder="0"></iframe>
-<img src="images/olabisi.png" alt="" width="459px" height="500px" style="margin-left: 100px; margin-top: 100px;" >
-<div style="margin-top: -700px;">
-<h2 class="Join"> <pre>Join 4+ million people who save
-and invest with us</pre></h2> 
+      <p class="every">"Every month, we shine a spotlight on one saver, asking them about
+their savings culture and how piggyvest has helped them"
+      </p>
+      <iframe class="tube" src="https://www.youtube.com/embed/8XzCzC9pFGM?autoplay=1&mute=1" frameborder="0"></iframe>
+<img class="olabisi" src="images/olabisi.png" alt="" width="459px" height="500px"  >
+<div class="bisi" >
+<h2 class="Join"> <p>Join 4+ million people who save <br>and invest with us</p></h2> 
 <button class="get"><a style="font-size:12.82px; transition: all .3s ease-in-out; text-decoration: none;
   cursor: pointer; font-weight: 600; color: #122231;" href="https://apps.apple.com/ng/app/piggyvest/id1263117994"> <img src="images/black.png" alt=""> Get on iphone</a></button>
-<button class="and"><a style="font-size:12.82px; transition: all .3s ease-in-out; text-decoration: none;
+  <button class="and"><a style=" font-size:12.82px; transition: all .3s ease-in-out; text-decoration: none;
   cursor: pointer; font-weight: 600; color: #122231;" href=""> <img src="images/google-play_6124997.png" alt="" style="margin-right:10px;">Get on Andriod</a></button>
 </div>
 
