made lots of changes

--- a/index.html
+++ b/index.html
@@ -14,21 +14,31 @@
     <div id="next">
  <header>
         <nav class="head"> 
-     <div>
-    <a href="p"><img src="images/_Piggyvest-removebg-preview.png" alt="piggyvest logo" width="200" height="40" style="margin-bottom: -10px;"></a>
-    <div class="ham">
-<span class="line"></span>
-<span class="line"></span>
-<span class="line"></span>
-    </div>
-    <a class="link" href="/save">Save</a>
-    <a class="link" href="/save">Invest</a>
-    <a class="link" href="/save">Stories</a>
-    <a class="link" href="/save">FAQs</a>
-    <a class="link" href="/save">Resource</a>
+    <a href="p"><img src="images/_Piggyvest-removebg-preview.png" alt="piggyvest logo" width="200" height="40" style="margin-top: -10px; margin-left: 35px;"></a>
+   <ul>
+    <li><a href="/save">Save</a></li>
+    <li><a href="/save">Invest</a></li>
+    <li><a href="/save">Stories</a></li>
+    <li><a href="/save">FAQs</a></li>
+    <li><a href="/save">Resources</a></li>
+   </ul>
     <button class="but">Sign In</button>
     <button class="create">Create an Account</button>
-</div>
+    
+    <div class="dropdown">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+      <ul>
+        <li><a href="/save">Save</a></li>
+        <li><a href="/save">Invest</a></li>
+        <li><a href="/save">Stories</a></li>
+        <li><a href="/save">FAQs</a></li>
+        <li><a href="/save">Resources</a></li>
+       </ul>
+       <button class="but">Sign In</button>
+       <button class="create">Create an Account</button>
+    </div>
 </nav>
 </header>
 
@@ -146,10 +156,11 @@ their savings culture and how piggyvest has helped them"
 <img class="olabisi" src="images/olabisi.png" alt="" width="459px" height="500px"  >
 <div class="bisi" >
 <h2 class="Join"> <p>Join 4+ million people who save <br>and invest with us</p></h2> 
-<button class="get"><a style="font-size:12.82px; transition: all .3s ease-in-out; text-decoration: none;
-  cursor: pointer; font-weight: 600; color: #122231;" href="https://apps.apple.com/ng/app/piggyvest/id1263117994"> <img src="images/black.png" alt=""> Get on iphone</a></button>
-  <button class="and"><a style=" font-size:12.82px; transition: all .3s ease-in-out; text-decoration: none;
-  cursor: pointer; font-weight: 600; color: #122231;" href=""> <img src="images/google-play_6124997.png" alt="" style="margin-right:10px;">Get on Andriod</a></button>
+<div >
+<a href="https://apps.apple.com/ng/app/piggyvest/id1263117994"><button class="get"><img src="images/black.png" alt=""> Get on iphone</button></a>
+
+<a href=""><button class="and"> <img src="images/google-play_6124997.png" alt="">Get on Andriod</button></a>
+</div>
 </div>
 
 <h4 class="feat">As featured in</h4>
