--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ them save and invest with ease.
  
   <img  class="lock" src="images/securitylock.svg" alt="" width="100px" >
 <div>
-  <p class="security" > Your security is our priority</p>
-<p class="sec"> PiggyVest uses the highest level of Internet Security and it is secured by 256 bits <br>
+  <p class="security" style="width: 500px" > Your security is our priority</p>
+<p class="sec" style="width: 670px; height: 80px;"> PiggyVest uses the highest level of Internet Security and it is secured by 256 bits <br>
  SSL security encryption to ensure that your information is comepletely protected from fraud.</p>
  <a class="right" href=""> <img src="images/right-down_10766640.png" alt="" height="25px" width="25px" style="margin-left: 150px;"> More on our security measures</a>
 </div>
@@ -166,18 +166,18 @@ their savings culture and how piggyvest has helped them"
 <h4 class="feat">As featured in</h4>
 <div class="featuerd">
   
-  <img src="images/tech.png" alt="" width="180px" height="35px">
-  <img src="images/guardian.png" alt="" width="180px" height="30px">
-  <img src="images/crunch.png" alt="" width="180px" height="30px">
-  <img src="images/pwn.svg" alt="" width="180px" height="30px" style="margin-left: -40px;" >
-  <img src="images/fast.svg" alt="" width="200px" height="55px" style="margin-left: -80px; margin-top: -10px;">
-  <img src="images/cio.svg" alt="" width="200px" height="30px" style="margin-left: -110px; margin-top: 3px;">
+  <img class="tech" src="images/tech.png" alt="" width="180px" height="35px">
+  <img class="guardian" src="images/guardian.png" alt="" width="180px" height="30px">
+  <img class="crunch" src="images/crunch.png" alt="" width="180px" height="30px">
+  <img class="pwn" src="images/pwn.svg" alt="" width="180px" height="30px" style="margin-left: -40px;" >
+  <img class="fast" src="images/fast.svg" alt="" width="200px" height="55px" style="margin-left: -80px; margin-top: -10px;">
+  <img class="cio" src="images/cio.svg" alt="" width="200px" height="30px" style="margin-left: -110px; margin-top: 3px;">
 </div>
 <footer>
 <div>
-  <img src="images/_Piggyvest.png" alt="" width="200px" height="40px" style="margin-top: 150px; margin-left: 85px;">
+  <img class="logopig" src="images/_Piggyvest.png" alt="" width="200px" height="40px">
 </div>
-  <img src="images/ndpr.webp" alt="" width="100px" style="margin-left:120px;">
+  <img class="ndpr" src="images/ndpr.webp" alt="" width="100px">
 
   <div class="pro">
     <p>Products</p>
