--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piggyvest</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -52,13 +53,13 @@ them save and invest with ease.
 </div>
 <div class="all" >
 <img class="wom" src="images/woman.png" alt="card" >
-<div class="headers">
+<!-- <div class="headers"> -->
     <img class="header" src="images/safe.png" alt="card"   >
     <img class="header2" src="images/target.png" alt="card" >
     <img class="header3" src="images/flex.png" alt="card">
     <img class="header4" src="images/card4 (1).avif" alt="card">
     <img class="header5" src="images/piggybank.png" alt="card" >
-  </div>
+  <!-- </div> -->
   </div>
   </div>
  
@@ -79,7 +80,9 @@ them save and invest with ease.
 <p class="text">Build a dedicated saving faster on your terms, automatically or manually</p>
 
 <p id="ggy">Piggybank</p>
+
 <img  src="images/phone.avif" alt="">
+
   </div>
 </div>
 </a>
